add slack status integration

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,4 @@
+SLACK_API_TOKEN=xoxp-...
 SPOTIFY_CLIENT_ID=your-client-id
 SPOTIFY_CLIENT_SECRET=your-client-secret
 SPOTIFY_REDIRECT_URI=your-redirect-uri
